--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -152,7 +152,7 @@ html, body, ul, li {
   .Cart__itemDesription {
     width: 100%;
     align-self: center;
-    display: flex;
+    /* display: flex; */
     flex-direction: row;
     justify-content: space-between;
   }
